[package]
name = "escrow"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]


[dependencies]
borsh = "1.6.1"
solana-program = "2.2.0"
# need to add no-entrypoint since these program crate also have entrpoint and custom heap so it dont conflict with our program entrypoint
spl-associated-token-account = {version = "7.0.0", features = [ "no-entrypoint"]} 
spl-token = "8.0.0"
